--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .search-input {
-    width: 300px;px ;    
+    width: 300px;  
     padding: 6px 12px;
     border: 1px solid #463333;
     border-radius: 25px;
